# LSDetris

./: .gitignore  CMakeLists.txt  README.md  configure.bat  configure.sh  install-vcpkg.bat  install-vcpkg.sh
src/: CMakeLists.txt  main.cpp
src/audio_test/: audio_info.cpp  audio_test.cpp
src/glfw_test/: glfw_test.cpp
